--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_out_attachments_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_out_attachments_message.xml
@@ -66,7 +66,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="12dp"
             android:layout_marginTop="4dp"
-            android:autoLink="phone|web|email"
+            android:autoLink="phone|email"
             android:textAlignment="viewStart"
             android:textColor="@color/sceyt_color_text_themed"
             android:textSize="@dimen/mediumTextSize"
