Fixed issue to show message reply container.

--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_out_attachments_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_out_attachments_message.xml
@@ -50,7 +50,7 @@
 
         <ViewStub
             android:id="@+id/viewReply"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout="@layout/sceyt_recycler_reply_container"
