--- a/SceytChatUiKit/src/main/res/values/sceyt_attrs_message.xml
+++ b/SceytChatUiKit/src/main/res/values/sceyt_attrs_message.xml
@@ -35,6 +35,9 @@
             <flag name="italic" value="2" />
         </attr>
 
+        <attr name="sceytUiAutoLinkTextColor" format="reference" />
+
+
         <!--Distance between messages-->
         <attr name="sceytUiSameSenderMessageDistance" format="dimension" />
         <attr name="sceytUiDifferentSenderMessageDistance" format="dimension" />
