Added logic to open ConversationInfo page when clicked in channel members.

--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_inc_attachments_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_inc_attachments_message.xml
@@ -12,6 +12,7 @@
         android:layout_height="@dimen/_28sdp"
         android:layout_alignTop="@+id/layoutDetails"
         android:layout_marginEnd="8dp"
+        android:background="?selectableItemBackgroundBorderless"
         android:visibility="gone"
         app:sceytAvatarViewTextSize="15sp"
         tools:sceytAvatarViewFullName="Ar"
