--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_inc_file_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_inc_file_message.xml
@@ -12,6 +12,7 @@
         android:layout_height="@dimen/_28sdp"
         android:layout_marginEnd="8dp"
         android:visibility="gone"
+        android:background="?selectableItemBackgroundBorderless"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/layoutDetails"
         app:sceytAvatarViewTextSize="15sp"
