--- a/SceytChatUiKit/src/main/res/layout/sceyt_dialog_direct_channel_actions.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_dialog_direct_channel_actions.xml
@@ -7,6 +7,23 @@
     android:paddingVertical="15dp">
 
     <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/muteUnMute"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?selectableItemBackground"
+        android:drawableStart="@drawable/sceyt_ic_muted_channel"
+        android:drawablePadding="15dp"
+        android:gravity="center_vertical"
+        android:includeFontPadding="false"
+        android:paddingHorizontal="23dp"
+        android:paddingVertical="10dp"
+        android:text="@string/sceyt_mute_"
+        android:textColor="@color/sceyt_color_text_themed"
+        android:textSize="@dimen/_12ssp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView3" />
+
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/unBlockUser"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
