--- a/SceytChatUiKit/src/main/res/layout/sceyt_info_page_layout_buttons_direct_channel.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_info_page_layout_buttons_direct_channel.xml
@@ -6,6 +6,20 @@
     android:gravity="center">
 
     <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/chat"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="10dp"
+        android:background="?selectableItemBackgroundBorderless"
+        android:drawableTop="@drawable/sceyt_ic_chat_24"
+        android:drawablePadding="10dp"
+        android:gravity="center"
+        android:minWidth="50dp"
+        android:text="@string/sceyt_chat"
+        android:textColor="@color/sceyt_color_text_themed"
+        android:textSize="13sp" />
+
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/audio"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
