Added logic and UI to reply message with swipe.

--- a/SceytChatUiKit/src/main/res/values/sceyt_attrs_message.xml
+++ b/SceytChatUiKit/src/main/res/values/sceyt_attrs_message.xml
@@ -50,6 +50,7 @@
         <attr name="sceytUiSelfReactionBackgroundColor" format="reference" />
         <attr name="sceytUiSelfReactionBorderColor" format="reference" />
 
+        <attr name="sceytUiSwipeReplyIcon" format="reference" />
 
     </declare-styleable>
 </resources>
