--- a/SceytChatUiKit/src/main/res/values/sceyt_attrs.xml
+++ b/SceytChatUiKit/src/main/res/values/sceyt_attrs.xml
@@ -84,7 +84,7 @@
     <declare-styleable name="SceytCustomToolbar">
         <attr name="title" format="string" />
         <attr name="navigationIcon" format="reference" />
-        <attr name="navigationEndIcon" format="reference" />
+        <attr name="menuIcon" format="reference" />
     </declare-styleable>
 
     <declare-styleable name="ScalableVideoView">
