--- a/SceytChatUiKit/src/main/res/values/sceyt_attrs.xml
+++ b/SceytChatUiKit/src/main/res/values/sceyt_attrs.xml
@@ -85,6 +85,7 @@
         <attr name="title" format="string" />
         <attr name="navigationIcon" format="reference" />
         <attr name="menuIcon" format="reference" />
+        <attr name="iconsTint" format="color|reference" />
     </declare-styleable>
 
     <declare-styleable name="ScalableVideoView">
