--- a/SceytChatUiKit/src/main/res/layout/sceyt_info_page_layout_buttons_private_channel.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_info_page_layout_buttons_private_channel.xml
@@ -5,7 +5,7 @@
     android:gravity="center">
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/call"
+        android:id="@+id/audio"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="10dp"
@@ -16,8 +16,7 @@
         android:minWidth="50dp"
         android:text="@string/sceyt_call"
         android:textColor="@color/sceyt_color_text_themed"
-        android:textSize="13sp"
-        android:visibility="gone" />
+        android:textSize="13sp" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/video"
@@ -31,8 +30,7 @@
         android:minWidth="50dp"
         android:text="@string/sceyt_video_small_case"
         android:textColor="@color/sceyt_color_text_themed"
-        android:textSize="13sp"
-        android:visibility="gone" />
+        android:textSize="13sp"/>
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/muteUnMute"
