Added channel media files separation with created date.

--- a/SceytChatUiKit/src/main/res/layout/sceyt_fragment_channel_media.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_fragment_channel_media.xml
@@ -9,8 +9,8 @@
         android:id="@+id/rvFiles"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginHorizontal="2dp"
         android:clipToPadding="false"
-        android:paddingHorizontal="2dp"
         android:paddingTop="5dp"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:spanCount="3"
