--- a/SceytChatUiKit/src/main/res/drawable/sceyt_ic_file_with_bg.xml
+++ b/SceytChatUiKit/src/main/res/drawable/sceyt_ic_file_with_bg.xml
@@ -5,7 +5,7 @@
     android:viewportWidth="36"
     android:viewportHeight="36">
     <path
-        android:fillColor="#4F6AFF"
+        android:fillColor="@color/sceyt_color_accent"
         android:pathData="M18,18m-18,0a18,18 0,1 1,36 0a18,18 0,1 1,-36 0" />
     <path
         android:fillColor="#ffffff"
