--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_channel_link.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_channel_link.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:animateLayoutChanges="true"
-    android:paddingBottom="12dp">
+    android:padding="8dp">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/icLinkImage"
