Added logic to show downloader in Conversation info page. Improved logic to manage Coroutine scopes.

--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_channel_file.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_channel_file.xml
@@ -28,7 +28,7 @@
         android:textSize="@dimen/mediumTextSize"
         android:textStyle="bold"
         app:layout_constrainedWidth="true"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/loadProgress"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintStart_toEndOf="@+id/icFile"
         app:layout_constraintTop_toTopOf="parent"
@@ -47,5 +47,22 @@
         app:layout_constraintStart_toEndOf="@+id/icFile"
         app:layout_constraintTop_toBottomOf="@+id/tvFileName"
         tools:text="67 KB" />
+
+    <com.sceyt.sceytchatuikit.presentation.customviews.SceytCircularProgressView
+        android:id="@+id/loadProgress"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:padding="1dp"
+        android:visibility="gone"
+        app:iconSizeInPercent="65"
+        app:iconTint="@color/sceyt_color_accent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:minProgress="2"
+        app:progressColor="@color/sceyt_color_accent"
+        app:trackColor="@android:color/transparent"
+        app:trackThickness="2.5dp"
+        tools:visibility="visible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
